--- a/play.html
+++ b/play.html
@@ -47,33 +47,58 @@ textstyle {
 </style>
 <link href="SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css">
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
+<script src="SpryAssets/SpryEffects.js" type="text/javascript"></script>
+<script type="text/javascript">
+function MM_openBrWindow(theURL,winName,features) { //v2.0
+  window.open(theURL,winName,features);
+}
+function MM_effectAppearFade(targetElement, duration, from, to, toggle)
+{
+	Spry.Effect.DoFade(targetElement, {duration: duration, from: from, to: to, toggle: toggle});
+}
+</script>
 </head>
 
 <body>
 <div id="container">
   <div id="header"><img src="images/banner1.jpg" width="1280" height="150"></div>
   <div id="article">
-    <table width="818" height="537" border="0" align="center">
+    <table width="908" height="594" border="1">
       <tr>
-        <td colspan="2" class="titlestyle">郭家雞肉飯</td>
+        <td colspan="2" class="textstyle"><a id="top"></a>文化路夜市　<a href="#zxc02">嘉義市立美術館　</a><a href="#zxc01">阿里山森林鐵路車庫園區</a><a href="阿里山"></a></td>
       </tr>
       <tr>
-        <td width="407" class="textstyle">嘉義火雞肉飯各家特色不同，多採用扎實有彈性的火雞胸肉撕成絲或切片、切丁鋪放在飽滿帶有光澤的米飯上，融合獨家特調醬汁，通常以銅板價格就能享有飽足又美味的一碗。吃一口，滋味濃郁、滿口溢香！</td>
-        <td width="401"><img src="images/Instagram_files/100073309_739813800090282_637497040903177112_n.jpg" width="401" height="216"></td>
+        <td colspan="2" class="titlestyle"><span class="titlestyle"><span class="textstyle"><span class="titlestyle">文化路夜市 </span></span></span></td>
       </tr>
       <tr>
-        <td colspan="2" class="titlestyle">綠洲 Oasis Brunch</td>
+        <td colspan="2"><p class="textstyle">自日治時期起，嘉義市以大通（中山路）、二通（中正路）及文化路各具特色的商店與販售商品，成為嘉南平原上最熱鬧的商圈。文化路夜市美食小吃名氣響亮，包括大江南北點心、道地嘉義火雞肉飯、豆漿豆花、傳統春捲、異國料理，還有北部吃不到的薑汁番茄、半夜才開賣食材來自東石的蚵仔煎……等，滿足老饕們的味蕾，服貼了每張挑剔的嘴，慕名前來的美食行家們絡繹於途。 </p>
+        <p class="textstyle">資料來源：<a href="https://travel.chiayi.gov.tw/TravelInformation/C000005/1/3f754a91-fbda-4596-a829-c24b286d74d3?SearchKeyword=文化路&Value&TravelTheme=&SortType=2&PageIndex=1">嘉義好旅行</a></p></td>
       </tr>
       <tr>
-        <td class="textstyle">綠洲主要供應質量兼具的拼盤式早午餐，「味噌醬烤雞腿」值得推薦，一份竟有兩隻雞腿，菜色豐富、營養美味。食物簡直要從盤子炸開的大份量，讓價格顯得更為合理。百分之百自製的布丁也值得推薦，吃來口感溫潤細緻的秘密，就在於加了成本較高的私房成分，誠意十足。</td>
-        <td><img src="images/Instagram_files/1.jpg" width="399" height="200"></td>
+        <td align="center"><img src="images/UploadPlugin (8).JPG小.jpg" width="300" height="200" onClick="MM_openBrWindow('images/UploadPlugin (8).jpg','','width=800,height=600')" onMouseOver="MM_effectAppearFade(this, 1000, 50, 100, false)"></td>
+        <td align="center"><img src="images/UploadPlugin (3).jpg" width="300" height="199" onClick="MM_openBrWindow('images/UploadPlugin (3).JPG大.jpg','','width=800,height=600')" onMouseOver="MM_effectAppearFade(this, 1000, 50, 100, false)"></td>
       </tr>
       <tr>
-        <td colspan="2" class="titlestyle">林聰明沙鍋魚頭</td>
+        <td colspan="2" class="titlestyle"><a name="zxc02" id="美術館"></a>嘉義市立美術館</td>
       </tr>
       <tr>
-        <td class="textstyle">林聰明沙鍋魚頭傳承三代，至今超過一甲子，堅持品質、用心料理成為嘉義人氣美食。推薦的「林聰明沙鍋龍虎斑魚頭獨享鍋」特別推出冷凍個人鍋調理包，讓民眾在家也可輕鬆享用嘉義特色美食。</td>
-        <td><img src="images/Instagram_files/UploadPlugin (2).jpg" width="401" height="223"></td>
+        <td colspan="2"><p class="textstyle">其主建物包含興建於1936年的古蹟、1954年的酒類倉庫和1980年的菸酒成品倉庫，建築形式兼具現代建築簡潔風格及面磚大量使用時期的特色，外牆轉角為弧形，基座抬高，開窗與窗楣呈水平帶狀；立面貼有北投產的SCRATCH風格磁磚，是古典建築風格蛻變為現代主義建築風格歷史見證。而在一、二樓樓梯處特別將柱頭、柱身設計為八邊稜角形的柱子，也是空間中的一大視覺焦點。 </p>
+        <p class="textstyle">資料來源：<a href="https://travel.chiayi.gov.tw/TravelInformation/C000005/1/d7ada217-efa2-4f8e-b51f-ab650aef6e0c?SearchKeyword=&Value&TravelTheme=&SortType=1&PageIndex=1">嘉義好旅行　</a><a href="#top">top</a><a href="#"></a></p></td>
+      </tr>
+      <tr>
+        <td align="center"><img src="images/UploadPlugin.JPG小.jpg" width="300" height="200" onClick="MM_openBrWindow('images/UploadPlugin.jpg','','width=800,height=600')" onMouseOver="MM_effectAppearFade(this, 1000, 50, 100, false)"></td>
+        <td align="center" onClick="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/UploadPlugin (5).jpg" width="300" height="200" onClick="MM_openBrWindow('images/UploadPlugin (5).JPG大.jpg','','width=800,height=600')" onMouseOver="MM_effectAppearFade(this, 1000, 50, 100, false)"></td>
+      </tr>
+      <tr>
+        <td colspan="2" class="titlestyle"><a name="zxc01" id="阿里山"></a>阿里山森林鐵路車庫園區</td>
+      </tr>
+      <tr>
+        <td colspan="2"><p class="textstyle">嘉義車庫園區阿里山林業鐵路列車的停靠基地，也是火車迷們訪嘉朝聖的大型火車生態博物園區，來此可近距離觸摸阿里山林業鐵路退役的各式蒸汽火車、柴油機車、動力客車、客貨車廂，和日治時期日本皇太子上阿里山所搭乘的檜木車廂，一窺阿里山鐵路百年縮影。 </p>
+        <p class="textstyle">資料來源：<a href="https://travel.chiayi.gov.tw/TravelInformation/C000005/1/7da167a2-85b7-496e-9590-b616e2e1fcc0?SearchKeyword=&Value&TravelTheme=&SortType=1&PageIndex=5">嘉義好旅行</a><a href="#top">　top</a><a href="#"></a></p></td>
+      </tr>
+      <tr>
+        <td align="center"><img src="images/UploadPlugin (6).JPG小.jpg" width="300" height="200" onClick="MM_openBrWindow('images/UploadPlugin (6).jpg','','width=800,height=600')" onMouseOver="MM_effectAppearFade(this, 1000, 50, 100, false)"></td>
+        <td align="center"><img src="images/UploadPlugin (4).jpg" width="300" height="200" onClick="MM_openBrWindow('images/UploadPlugin (4).JPG大.jpg','','width=800,height=600')" onMouseOver="MM_effectAppearFade(this, 1000, 50, 100, false)"></td>
       </tr>
     </table>
   </div>
